--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,28 @@
-html, body{
-    width: 100vw;
-    height: 100vh;
+html,
+body {
+  width: 100vw;
+  height: 100vh;
+
+  background: linear-gradient(
+    0deg,
+    rgba(34, 193, 195, 0.5217437316723564) 0%,
+    rgba(126, 190, 132, 0.38728995015975143) 42%,
+    rgba(253, 187, 45, 0.3956933115042892) 100%
+  );
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.mainWrapper{
-    width: 100%;
-    height: 100%;
+.mainWrapper {
+  width: 100%;
+  height: 100%;
 }
 
+.searchBox {
+  vertical-align: middle;
+}
+
+.clearFilterBtn {
+  border: none;
+  background: none;
+}
